# pub_forward-ad

./: .gitattributes  CMakeLists.txt  README.md
include/: Tensor.hpp  debug.hpp  matrix.hpp
src/: MainTest.cpp
